# lazy-rabbit-skills

./: README.md  README_zh-CN.md  install.sh  setup.sh  uninstall.sh
skills/agents-md-generate/: SKILL.md
skills/brainstorm-mindmap/: SKILL.md
skills/cpp-core-guide/: SKILL.md
skills/diagram-render/: SKILL.md
skills/feature-design-doc/: SKILL.md
skills/gitlab-mr-issue/: SKILL.md
skills/gitlab-mr-review/: SKILL.md
skills/gitlab-mr-split/: SKILL.md
skills/gitlab-mr-testcase/: SKILL.md
skills/lazy-cpp-dev/: SKILL.md
skills/lazy-design-challenge/: SKILL.md
skills/lazy-go-dev/: SKILL.md
skills/lazy-harness-audit/: SKILL.md
skills/lazy-harness-helper/: SKILL.md
skills/lazy-java-dev/: SKILL.md
skills/lazy-memgraph-helper/: SKILL.md  docker-compose.yml
skills/lazy-network-doctor/: SKILL.md
skills/lazy-python-dev/: SKILL.md
skills/lazy-scrum-team/: SKILL.md
skills/lazy-skill-check/: SKILL.md
skills/lazy-skill-write/: SKILL.md
skills/lazy-sqlite-helper/: SKILL.md
skills/markdown-to-mindmap/: README.md  SKILL.md
skills/microservice-design-doc/: SKILL.md
skills/pkb-collect/: SKILL.md
skills/pkb-refer/: SKILL.md
skills/project-knowledge-base/templates/sphinx/: Makefile  ai-guide.md  conf.py  index.md  make.bat  pyproject.toml  requirements.txt
skills/project-knowledge-base/templates/sphinx/_static/: custom.css
skills/project-knowledge-base/templates/sphinx/_templates/: layout.html
skills/project-knowledge-base/templates/sphinx/adr/: index.md
skills/project-knowledge-base/templates/sphinx/changes/: index.md
(+205 files in other folders)
