[project]
name = "pkb-sphinx-template"
version = "0.1.0"
description = "Poetry-managed Sphinx dependencies for generated Project Knowledge Bases."
authors = [
    {name = "Walter Fan", email = "walterfan@ustc.edu"}
]
requires-python = "^3.10"
dependencies = [
    "sphinx (>=7.0.0)",
    "myst-parser (>=2.0.0)",
    "sphinx-rtd-theme (>=2.0.0)",
    "furo (>=2024.1.29)",
    "sphinx-copybutton (>=0.5.2)",
    "sphinx-design (>=0.5.0)",
    "sphinx-autobuild (>=2024.2.4)",
    "sphinxcontrib-mermaid (>=0.9.2)",
    "linkify-it-py (>=2.0.0)",
    "sphinxcontrib-plantuml (>=0.27)",
    "sphinx-intl (>=2.3.2,<3.0.0)",
    "polib (>=1.2.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
